[tool.poetry]
name = "python-download"
version = "0.0.1.1"
description = "Python for download."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/python-download"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/python-download"
keywords = ["download"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp_client_request = "*"
http_response = "*"
python-asynctools = "*"
python-concurrenttools = "*"
python-filewrap = "*"
python-iterutils = "*"
python-http_request = "*"
python-urlopen = "*"
requests_request = "*"

[tool.poetry.scripts]
python-download = "download.__main__:main"
download = "download.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "download"
